docs: github.io 문서 사이트 점검 — 링크·이미지 경로 수정, java_basic 재구성 반영
- 메인 index의 존재하지 않는 '정적서버github사이트만들기' 링크 제거
- jwt_oauth2설명_back.md 이미지 경로 수정(spring_csr_jwt_oauth2_images/ 접두) 및 누락 이미지(img_6) 복사, 존재하지 않는 img_7 참조 제거
- 공백 포함 링크를 kramdown 호환 <...> 표기로 통일 (spring_csr_jwt_oauth2, spring_ssr_security_oauth2 index)
- 이전 작업분 포함: 이미지 폴더를 docs/assets/images → 각 주제 폴더로 재배치, java_basic 실습코드 재편

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>